@@ -76,6 +76,9 @@ my %intervals = (
   "191912783 +247" => 1,
   "191912784 +246" => 0,
 
+  "3 to 15000"  => 1753,
+  "7 to 54321"  => 5522,
+
   "1e14 +2**16" => 1973,
   "127976334671 +468" => 2,
   "127976334672 +467" => 1,
